--- a/css/form.css
+++ b/css/form.css
@@ -1,5 +1,7 @@
 .form-section {
+  position: relative;
   width: 100%;
+  height: 670px;
   display: flex;
   justify-content: center;
 }
@@ -12,8 +14,8 @@
   z-index: 20;
   padding: 0 20px;
   width: 100%;
-  height: 700px;
-  background-color: rgba(0, 0, 0, 0.4);
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .alert-ok {
@@ -64,10 +66,26 @@ form {
   border: 1px solid #c4c4c4;
   border-radius: 3px;
   height: 30px;
-  margin-top: 20px;
+  margin-top: 10px;
+}
+
+.name {
+  position: relative;
+}
+.mail {
+  position: relative;
 }
 .caracteristiques {
-  margin-top: 20px;
+  margin-top: 10px;
+}
+select {
+  position: relative;
+}
+
+.select-div {
+  width: 60%;
+  min-width: 200px;
+  position: relative;
 }
 .select-puissance {
   width: 100%;
@@ -95,24 +113,23 @@ form {
 .option-checkbox {
   margin-top: 10px;
 }
+
+.option-checkbox:nth-child(2) {
+  margin-top: 10px;
+}
+
 .checkbox {
   margin-top: 10px;
 }
 
 .help-text {
-  display: none;
-  align-items: center;
-  width: 100%;
+  opacity: 0;
+  transform: scale(0);
   font-size: 0.8em;
-  border: 1px solid red;
-  border-radius: 3px;
-  margin: 0 1%;
+  padding-left: 10px;
   margin-top: 3px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  text-align: center;
-  background-color: #f8d7da;
   color: red;
+  transition: transform 0.3s, opacity 0.3s;
 }
 
 .is-valid input {
@@ -131,7 +148,43 @@ form {
 }
 
 .is-not-valid .help-text {
-  display: block;
+  transform: none;
+  opacity: 1;
+}
+
+.invalid-symbole {
+  visibility: hidden;
+  position: absolute;
+  width: 20px;
+}
+
+.valid-symbole {
+  visibility: hidden;
+  position: absolute;
+  width: 20px;
+}
+
+.symbole-name {
+  right: 0px;
+  top: 30%;
+}
+
+.symbole-mail {
+  right: 0px;
+  top: 30%;
+}
+
+.symbole-select {
+  top: 28%;
+  right: -10%;
+}
+
+.is-valid .valid-symbole {
+  visibility: visible;
+}
+
+.is-not-valid .invalid-symbole {
+  visibility: visible;
 }
 
 .prix-total {
@@ -144,6 +197,7 @@ form {
   margin-top: 10px;
   width: 100%;
   height: 30px;
+  border: 1px solid #0069d9;
   border-radius: 3px;
   background-color: #0069d9;
   color: white;
