--- a/css/header.css
+++ b/css/header.css
@@ -4,28 +4,42 @@
   box-sizing: border-box;
 }
 
-.logo-tesla {
-  position: absolute;
-  top: 20px;
-  right: 5px;
-  width: 60%;
-  height: auto;
-  color: #fff;
-}
-.photo-header {
-  position: absolute;
+header {
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
+}
+
+.photo-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  /*width: 100%;
+  height: 100vh;*/
+  z-index: -1;
+}
+
+.header-wrapper {
+  position: fixed;
+  width: 100%;
+}
+
+.logo-tesla {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 50px;
+  height: 50px;
 }
 
 .menu {
-  position: fixed;
+  position: absolute;
   left: 15px;
   top: 15px;
   height: 50px;
-  width: 50px;
   background-color: transparent;
   overflow: hidden;
   transition: left 0.5s, top 0.5s, width 0.5s, height 0.5s;
@@ -59,7 +73,7 @@
 .menu-icon::after {
   width: 30px;
   height: 4px;
-  background: #fff;
+  background: #000;
 }
 
 .menu-icon::before,
@@ -107,7 +121,8 @@ ul {
 
 .is-open ul {
   transform: none;
-  opacity: 1;
+  opacity: 0.8;
+  background-color: #ccc;
 }
 
 li {
@@ -115,5 +130,15 @@ li {
   font-family: sans-serif, Arial;
   font-size: 30px;
   padding: 15px;
-  color: #fff;
+  color: #000;
+  border-bottom: 2px solid black;
+  width: 50%;
+  text-align: center;
+}
+
+.logo-arch {
+  position: absolute;
+  width: 70%;
+  top: 15%;
+  left: 15%;
 }
