--- a/css/header.css
+++ b/css/header.css
@@ -103,7 +103,7 @@ header {
   transform: translateY(-2px) rotate(-45deg);
 }
 
-ul {
+.menu-items {
   position: fixed;
   left: 0;
   top: 0;
@@ -119,7 +119,7 @@ ul {
   transition: transform 0.5s, opacity 0.3s;
 }
 
-.is-open ul {
+.is-open .menu-items {
   transform: none;
   opacity: 0.8;
   background-color: #ccc;
