--- a/css/article.css
+++ b/css/article.css
@@ -1,5 +1,5 @@
 body {
-  background: lightgray;
+  background: black;
 }
 
 article {
@@ -8,23 +8,52 @@ article {
   margin-right: 5%;
   padding: 5%;
   display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  article {
+    flex-direction: row;
+  }
 }
 
 aside {
   margin: 2%;
-  margin-top: 10%;
+  margin-top: 20%;
   margin-left: 5%;
 }
 
 h1 {
   font-size: 30px;
   font-weight: bolder;
+  margin-bottom: 30px;
+  padding-bottom: 20px;
+  border-bottom: 2px solid black;
 }
 
 h3 {
   font-size: 20px;
   font-weight: bold;
   padding: 20px;
+}
+.conteneur {
+  float: right;
+  margin: 10px;
+  margin-left: 20px;
+}
+
+.ballast {
+  float: left;
+  margin: 10px;
+  margin-right: 20px;
+}
+
+p {
+  text-align: justify;
+}
+.cargoSolaire {
+  float: left;
+  margin: 10px;
+  margin-right: 20px;
 }
 .auteurs {
   position: absolute;
