--- a/css/header.css
+++ b/css/header.css
@@ -168,13 +168,13 @@ header {
   position: absolute;
   width: 60%;
   max-width: 400px;
-  height: 50px;
-  border: 4px solid black;
+  height: 40px;
   bottom: 10%;
   text-align: center;
   text-decoration: none;
   color: black;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-radius: 50px;
 }
 
 .buy-button:hover {
@@ -193,6 +193,8 @@ header {
 
   .menu {
     position: relative;
+    display: flex;
+    justify-content: center;
     width: 100%;
     overflow: visible;
   }
@@ -209,11 +211,10 @@ header {
     position: relative;
     width: 80%;
     max-width: 900px;
-    padding-left: 10%;
     height: auto;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     opacity: 1;
     transform: none;
   }
