--- a/css/footer.css
+++ b/css/footer.css
@@ -14,10 +14,23 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 25vh;
+  height: 100%;
 }
 
 .footerlogo {
   width: 25px;
   height: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    flex-direction: column-reverse;
+    padding: 0 20%;
+  }
+
+  .footerbox {
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: auto;
+  }
 }
