--- a/css/form.css
+++ b/css/form.css
@@ -106,12 +106,12 @@ select {
 .colors {
   display: flex;
   justify-content: space-between;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .colors .color-li {
   display: flex;
   position: relative;
-  width: 20%;
+  width: 15%;
   max-width: 50px;
   cursor: pointer;
 }
@@ -124,9 +124,9 @@ select {
 .color-description {
   position: absolute;
   font-size: 0.8em;
-  left: -10px;
-  top: 60px;
-  width: 200%;
+  left: 0;
+  top: 55px;
+  width: 100%;
 }
 .option-checkbox {
   margin-top: 30px;
@@ -138,8 +138,8 @@ select {
 }
 
 .is-selected .color-description {
-  top: 57px;
-  left: -13px;
+  top: 52px;
+  left: -3px;
 }
 
 .option-checkbox:nth-child(2) {
