--- a/css/header.css
+++ b/css/header.css
@@ -22,14 +22,15 @@ header {
 .header-wrapper {
   display: flex;
   position: fixed;
+  height: 60px;
   width: 100%;
-  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .logo-tesla {
   position: fixed;
-  right: 30px;
-  top: 20px;
+  left: 10px;
+  top: 10px;
   width: 50px;
   height: 50px;
   z-index: 2;
@@ -37,8 +38,8 @@ header {
 
 .logo-tesla img {
   position: fixed;
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 40px;
   z-index: 2;
 }
 
@@ -53,8 +54,6 @@ header {
 }
 
 .is-open {
-  left: 0;
-  top: 0;
   width: 100vh;
   height: 100vh;
 }
@@ -64,8 +63,8 @@ header {
   justify-content: center;
   align-items: center;
   position: fixed;
-  left: 10px;
-  top: 10px;
+  right: 30px;
+  top: 5px;
   height: 50px;
   width: 50px;
 }
@@ -80,7 +79,7 @@ header {
 .menu-icon::after {
   width: 30px;
   height: 4px;
-  background: #000;
+  background: white;
 }
 
 .menu-icon::before,
@@ -121,7 +120,7 @@ header {
   justify-content: center;
   align-items: center;
   list-style: none;
-  transform: translate(-40vw, calc(-50vh + 40px)) scale(0);
+  transform: translate(40vw, calc(-50vh + 40px)) scale(0);
   opacity: 0;
   transition: transform 0.5s;
 }
@@ -188,7 +187,7 @@ header {
 
 @media screen and (min-width: 768px) {
   .header-wrapper {
-    position: relative;
+    position: fixed;
   }
 
   .menu {
@@ -217,6 +216,7 @@ header {
     justify-content: center;
     opacity: 1;
     transform: none;
+    top: -25px;
   }
 
   .menu-items {
@@ -224,7 +224,6 @@ header {
     height: 20px;
     font-size: 20px;
     cursor: pointer;
-    margin-top: 10px;
     background: none;
   }
 
@@ -233,7 +232,16 @@ header {
   }
 
   .menu-list .menu-items:nth-child(-n + 3) {
-    border-right: 3px solid black;
+    border-right: 1px solid white;
+  }
+
+  .is-open .menu-list {
+    opacity: 1;
+    background: none;
+  }
+
+  .lien-menu {
+    color: white;
   }
 }
 
