new img solaire and margin bottom

--- a/css/techno.css
+++ b/css/techno.css
@@ -1,6 +1,6 @@
 .techno {
   width: 100%;
-  min-height: auto;
+  height: auto;
 }
 
 .techno-wrapper {
@@ -35,6 +35,7 @@
   }
   .techno-image {
     width: 225%;
+    margin-bottom: 5%;
   }
   .techno-text {
     margin: auto;
