--- a/css/header.css
+++ b/css/header.css
@@ -28,7 +28,7 @@ header {
 
 .logo-tesla {
   position: fixed;
-  left: 10px;
+  left: 5%;
   top: 10px;
   width: 50px;
   height: 50px;
@@ -182,6 +182,8 @@ header {
 .buy-button span {
   margin: auto;
   font-size: 1.3em;
+  letter-spacing: 5px;
+  font-weight: bolder;
 }
 
 @media screen and (min-width: 768px) {
@@ -216,6 +218,7 @@ header {
     opacity: 1;
     transform: none;
     top: -25px;
+    margin-left: 20%;
   }
 
   .menu-items {
@@ -225,9 +228,10 @@ header {
     cursor: pointer;
     background: none;
   }
-
-  .menu-list .menu-items:hover {
-    text-decoration: underline;
+  .menu-items a {
+    font-weight: lighter;
+    font-size: 0.8em;
+    letter-spacing: 3px;
   }
 
   .menu-list .menu-items:nth-child(-n + 3) {
