--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  font-family: "Montserrat";
-
+  font-family: "Montserrat", sans-serif;
   background-color: black;
   color: white;
-
 }
