--- a/css/form.css
+++ b/css/form.css
@@ -115,8 +115,9 @@ form h1 {
   margin-top: 20px;
 }
 .colors .color-li {
-  display: flex;
   position: relative;
+  z-index: 0;
+  display: flex;
   width: 15%;
   max-width: 50px;
   cursor: pointer;
@@ -200,6 +201,7 @@ form h1 {
 }
 
 .color-img-small-device {
+  z-index: -1;
   display: block;
   position: relative;
   width: 200px;
