--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
 }
 
 header {
+  z-index: 1;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -109,6 +110,7 @@ header {
 
 .menu-list {
   position: fixed;
+
   left: 0;
   top: 0;
   height: 100vh;
