--- a/css/header.css
+++ b/css/header.css
@@ -128,7 +128,7 @@ header {
 .is-open .menu-list {
   transform: none;
   opacity: 0.8;
-  background-color: #ccc;
+  background-color: rgb(0, 0, 0);
   z-index: 1;
 }
 
@@ -139,7 +139,7 @@ header {
   margin-top: 30px;
   padding: 15px;
   color: #000;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid white;
   width: 50%;
   text-align: center;
 }
@@ -151,7 +151,7 @@ header {
   width: 100%;
   height: 100%;
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 .logo-arch {
