--- a/css/article2.css
+++ b/css/article2.css
@@ -6,8 +6,22 @@ body {
   padding: 5%;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
+.lienFleche {
+  position: absolute;
+  transform: translateX(-45px);
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+}
+
+.iconeFleche {
+  height: 80%;
+  width: 80%;
+  justify-content: center;
+}
 .article2-contenu {
   display: flex;
   flex-direction: column;
@@ -26,7 +40,6 @@ body {
   padding: 20px;
   margin-top: 20px;
 }
-
 
 .article2-wrapper {
   display: flex;
@@ -59,7 +72,6 @@ body {
     padding: 0px 30px;
   }
 }
-
 
 @media (min-width: 1024px) {
   .article2-wrapper {
