--- a/css/article1.css
+++ b/css/article1.css
@@ -7,6 +7,21 @@ article {
   padding: 5%;
   display: flex;
   flex-direction: column;
+ 
+}
+
+.lienFleche {
+  position: absolute;
+  transform: translateX(-45px);
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+}
+
+.iconeFleche {
+  height: 80%;
+  width: 80%;
+  justify-content: center;
 }
 
 aside {
@@ -72,7 +87,6 @@ p {
     width: 200px;
   }
 }
-
 
 
 @media (min-width: 768px) {
