--- a/css/description-options.css
+++ b/css/description-options.css
@@ -2,39 +2,70 @@
   box-sizing: border-box;
 }
 
-.description-wrapper {
+.description {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   width: 100%;
-  height: 100vh;
-  border: 1px solid red;
+  height: auto;
   text-align: center;
-}
-
-.description-wrapper:nth-child(1) {
-  justify-content: space-between;
 }
 
 .description-image {
   max-width: 100%;
 }
 
-.description-image:nth-child(1) {
-  margin-top: 25px;
-}
-
 .description-image-content {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
 }
 
 .description-text {
+  font-size: 30px;
   text-transform: uppercase;
-  /*opacity: 0;
-  transition: opacity 0.3s;*/
+  padding: 100px 0;
 }
 
-.visible {
-  opacity: 1;
+.letter-e {
+  text-transform: none;
+  font-size: 40px;
+  color: rgb(0, 128, 0);
+}
+@media screen and (min-width: 768px) {
+  .image-noise {
+    display: none;
+  }
+  .description {
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
+  }
+
+  .image-design {
+    width: 60%;
+  }
+
+  .description-image-content {
+    border: none;
+    width: 100%;
+  }
+
+  .description-text {
+    position: absolute;
+    left: 10%;
+  }
+
+  .text-design {
+    top: 5%;
+  }
+
+  .text-noise {
+    top: 35%;
+  }
+
+  .text-eco {
+    bottom: 5%;
+  }
 }
