--- a/css/article-link.css
+++ b/css/article-link.css
@@ -10,6 +10,7 @@
   left: 20%;
   font-size: 3em;
   letter-spacing: 10px;
+  z-index: 1;
 }
 
 .suiv {
@@ -44,9 +45,10 @@
 }
 
 .article-presentation-image {
-  opacity: 0.4;
+  opacity: 0.6;
   width: 100%;
   max-height: 200px;
+  z-index: -1;
 }
 
 .article-head {
@@ -110,7 +112,7 @@
   .article-presentation-image {
     max-width: 907px;
     height: auto;
-    max-height: 550px;
+    max-height: 485px;
     overflow: hidden;
   }
 }
