--- a/css/form.css
+++ b/css/form.css
@@ -24,8 +24,8 @@
 .alert-ok {
   display: none;
   width: 300px;
-  border: 2px solid green;
-  background-color: #d4edda;
+  border: 4px solid white;
+  background-color: rgba(0, 0, 0, 0.8);
   color: green;
 }
 
@@ -33,20 +33,22 @@
   display: inline-block;
   text-align: center;
   margin: 30px 60px;
+  font-weight: bold;
 }
 
 .alert-wrong {
   display: none;
   width: 300px;
-  border: 1px solid rgba(255, 0, 0, 0.815);
-  background-color: #f8d7da;
-  color: rgba(255, 0, 0, 0.815);
+  border: 4px solid white;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: red;
 }
 
 .alert-wrong span {
   display: inline-block;
   text-align: center;
   margin: 30px 40px;
+  font-weight: bold;
 }
 
 form {
@@ -181,7 +183,7 @@ form h1 {
 
 .symbole-mail {
   right: 5%;
-  top: 30%;
+  top: 25%;
 }
 
 .is-valid .valid-symbole {
@@ -196,6 +198,11 @@ form h1 {
   margin-top: 10px;
   display: flex;
   justify-content: space-around;
+}
+
+.prix {
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .color-img-small-device {
