--- a/css/techno.css
+++ b/css/techno.css
@@ -26,6 +26,9 @@
   line-height: 25px;
 }
 
+.pTitle {
+  font-size: 24px;
+}
 @media screen and (min-width: 768px) {
   .techno-wrapper {
     flex-direction: row;
