--- a/css/header.css
+++ b/css/header.css
@@ -29,6 +29,12 @@ header {
   text-shadow: 3px 0px 6px rgba(0, 0, 0, 0.9), -3px 0px 6px rgba(0, 0, 0, 0.9),
     0px 3px 6px rgba(0, 0, 0, 0.9), 0px -3px 6px rgba(0, 0, 0, 0.9);
   text-align: center;
+  opacity: 0;
+  transition: opacity 1s 0.5s;
+}
+
+.slogan.is-grown {
+  opacity: 1;
 }
 
 .header-wrapper {
