--- a/css/transitions-mobile.css
+++ b/css/transitions-mobile.css
@@ -1,86 +1,110 @@
 .move.is-moved {
   transform: none;
   opacity: 1;
-
 }
 
 .description-text {
   transform: translateY(10px);
   opacity: 0;
-  transition: transform 0.5s 0.2s, opacity 1s 0.2s;
+  transition: transform 0.5s, opacity 1s;
 }
 
 .description-image-content {
   transform: translateY(10px);
   opacity: 0;
-  transition: transform 0.5s 0.2s, opacity 1s 0.2s;
+  transition: transform 0.5s, opacity 1s;
 }
 
-.techno-wrapper {
+.techno-img-1 {
   transform: translateY(10px);
   opacity: 0;
-  transition: transform 0.5s 0.2s, opacity 1s 0.2s;
+  transition: transform 1s, opacity 1s;
+}
+.techno-text-1 {
+  transform: translateY(10px);
+  opacity: 0;
+  transition: transform 1s, opacity 1s;
+}
+.techno-img-2 {
+  transform: translateY(10px);
+  opacity: 0;
+  transition: transform 1s, opacity 1s;
+}
+.techno-text-2 {
+  transform: translateY(10px);
+  opacity: 0;
+  transition: transform 1s, opacity 1s;
+}
+.techno-img-3 {
+  transform: translateY(10px);
+  opacity: 0;
+  transition: transform 1s, opacity 1s;
+}
+.techno-text-3 {
+  transform: translateY(10px);
+  opacity: 0;
+  transition: transform 1s, opacity 1s;
 }
 
 .ficheTech {
   transform: translateY(30px);
   opacity: 0;
-  transition: transform 0.5s 0.2s, opacity 1s 0.2s;
+  transition: transform 0.5s, opacity 1s;
 }
 
-.form-section {
+.formCommande {
   transform: translateY(30px);
   opacity: 0;
-  transition: transform 0.5s 0.2s, opacity 1s 0.2s;
+  transition: transform 1s, opacity 1s;
 }
 
 .section-article {
   transform: translateY(30px);
   opacity: 0;
-  transition: transform 0.5s 0.2s, opacity 1s 0.2s;
+  transition: transform 0.5s, opacity 1s;
 }
 
 @media screen and (min-width: 768px) {
   .techno-img-1 {
     transform: translateX(-30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
   .techno-text-1 {
     transform: translateX(30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
   .techno-img-2 {
     transform: translateX(30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
   .techno-text-2 {
     transform: translateX(-30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
   .techno-img-3 {
     transform: translateX(-30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
   .techno-text-3 {
     transform: translateX(30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
 
   .technique-tab {
     transform: translateX(-30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
   .technique-img {
     transform: translateX(30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
 }
 
@@ -89,21 +113,18 @@
     transform: translateX(-30px);
     opacity: 0;
     transition: transform 1s, opacity 1s;
-    transition-delay: 0.2s;
   }
 
   .text-noise {
     transform: translateX(-30px);
     opacity: 0;
     transition: transform 1s, opacity 1s;
-    transition-delay: 0.6s;
   }
 
   .text-eco {
     transform: translateX(-30px);
     opacity: 0;
     transition: transform 1s, opacity 1s;
-    transition-delay: 1s;
   }
 
   .description-image-content {
@@ -117,12 +138,12 @@
   .formCommande {
     transform: translateX(-30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
 
   .color-img-big-device {
     transform: translateX(30px);
     opacity: 0;
-    transition: transform 1s 0.2s, opacity 1s 0.2s;
+    transition: transform 1s, opacity 1s;
   }
 }
