--- a/css/header.css
+++ b/css/header.css
@@ -191,7 +191,7 @@ header {
   position: absolute;
   padding-top: 8px;
   width: 60%;
-  min-width: 273px;
+  min-width: 300px;
   max-width: 400px;
   height: 50px;
   bottom: 10%;
@@ -200,6 +200,7 @@ header {
   color: white;
   background-color: rgba(0, 0, 0, 0.4);
   border: 6px solid white;
+  letter-spacing: 5px;
 }
 
 .buy-button a {
@@ -268,6 +269,10 @@ header {
   }
 
   .buy-button-header a {
+    letter-spacing: 10px;
+  }
+
+  .buy-button {
     letter-spacing: 10px;
   }
 }
