--- a/css/footer.css
+++ b/css/footer.css
@@ -10,19 +10,19 @@
   text-decoration: none;
   color: white;
 }
-.footerbox {
+.footer-box {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   height: 100%;
 }
 
-.footerlogo {
+.footer-logo {
   display: inline-block;
   width: 30px;
 }
 
-.footerlogo img {
+.footer-logo img {
   width: 100%;
 }
 
@@ -31,21 +31,21 @@
     flex-direction: column-reverse;
   }
 
-  .footerbox {
+  .footer-box {
     flex-direction: row;
     justify-content: center;
     height: auto;
   }
 
-  .footerlogo {
+  .footer-logo {
     width: 40px;
   }
 
-  .footerbox li {
+  .footer-box li {
     margin: 0 5%;
   }
 
-  .footerbox .footerlogo {
+  .footer-box .footer-logo {
     margin: 0 3%;
   }
 }
