--- a/css/article-link.css
+++ b/css/article-link.css
@@ -75,28 +75,23 @@
   left: 60%;
   width: 30%;
   height: 40px;
-  border: 3px solid white;
-  background: none;
-  cursor: pointer;
+  color: white;
 }
 
-.article-link a {
-  display: block;
-  padding-top: 7px;
+.article-link button {
+  background: none;
   width: 100%;
   height: 100%;
-  font-size: 1.1em;
-  font-weight: bold;
   color: white;
-  text-decoration: none;
+  border: 3px solid white;
+  font-weight: bold;
+  font-size: 1.3em;
 }
 
-.article-link:hover {
-  background-color: white;
-}
-
-.article-link:hover a {
+.article-link:hover button {
   color: black;
+  background-color: white;
+  cursor: pointer;
 }
 
 .article-here.is-hidden {
