--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,5 @@
 .footer {
+  position: relative;
   background-color: rgb(35, 35, 35);
   width: 100%;
   height: 25vh;
@@ -24,6 +25,14 @@
 
 .footer-logo img {
   width: 100%;
+}
+
+.footer-message {
+  align-self: center;
+  position: absolute;
+  bottom: 0;
+  font-size: 8px;
+  color: white;
 }
 
 @media screen and (min-width: 768px) {
